syntax = "proto3";

package kim.gokeeper;

option go_package = ".;pb";

message KeyValue {
  string title = 2;
  string key = 3;
  string value = 4;
}

message AddKeyValueRequest {
  KeyValue data = 1;
}

message AddKeyValueResponse {
  string error = 1;
}

message GetKeyValueRequest {
  int64 id = 1;
}

message GetKeyValueResponse {
  KeyValue data = 1;
  string error = 2;
}

message ListKeyValueRequest {
  int64 offset = 1;
  int64 limit = 2;
}

message ListKeyValueResponse {
  int64 count = 1;
  repeated KeyValue data = 2;
}

message DelKeyValueRequest {
  int64 id = 1;
}

message DelKeyValueResponse {
  string error = 1;
}